--- a/language/language.css
+++ b/language/language.css
@@ -179,7 +179,7 @@ body.eraser-mode * {
     cursor: crosshair !important;
 }
 
-/* ==========================================================
+/* ====================== ====================================
    🎮 게임 방법 버튼
    ========================================================== */
 #guide-box {
@@ -228,6 +228,7 @@ body.eraser-mode * {
 
 /* Hover 시 팝업 열림 */
 #guide-box:hover #guide-popup {
+
     opacity: 1;
     pointer-events: auto;
 }
